# paperinsight

./: .gitignore  LICENSE  README.md  pyproject.toml
data/sample/: paper_dataset_sample.csv
data/sample/metadata_sample/: SAMPLE_with_metadata.json
docs/: DATA_POLICY.md  PROJECT_STRUCTURE.md
src/zpaper/: __init__.py  make_sample_data.py  semantic_disruption.py
